# Toss-rcalc

./: Cargo.toml
functions/: functions.json
history/: calc_history.json
src/: cli.rs  evaluator.rs  functions.rs  history.rs  main.rs  parser.rs
