[package]
name = "rcalc"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
clap = { version = "4.4", features = ["derive"] }
atty = "0.2.14"
lazy_static = "1.4.0"
regex = "1.10.4" 

[dev-dependencies]
tempfile = "3.3"
